[package]
name = "bench"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.79"
bytes = "1"
hdrhistogram = { version = "7.5", default-features = false }
quinn = { path = "../quinn" }
rcgen = "0.12.1"
rustls = { version = "0.22.2", default-features = false }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
