[package]
name = "perf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["json-output"]
# Allow for json output from the perf client
json-output = ["serde", "serde_json"]

[dependencies]
anyhow = "1.0.79"
hdrhistogram = { version = "7.5", default-features = false }
quinn = { path = "../quinn" }
quinn-proto = { path = "../quinn-proto" }
rcgen = "0.12.1"
rustls = { version = "0.22.2", default-features = false }
rustls-pemfile = "2.0.0"
serde = { version = "1.0", features = ["derive"], optional = true  }
serde_json = { version = "1.0", optional = true }
socket2 = "0.5"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "macros", "signal", "net", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
bytes = "1"
