[package]
name = "quinn-proto"
version = "0.11.0"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinn-rs/quinn"
description = "State machine for the QUIC transport protocol"
keywords = ["quic"]
categories = [ "network-programming", "asynchronous" ]
workspace = ".."

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "experimental" }

[features]
default = ["tls-rustls", "rustls-ring", "log"]
tls-rustls = ["rustls", "rustls-pki-types"]
# Enable rustls ring provider and direct ring usage
rustls-ring = ["rustls/ring", "ring"]
# Provides `ClientConfig::with_platform_verifier()` convenience method
platform-verifier = ["rustls-platform-verifier"]
# Write logs via the `log` crate when no `tracing` subscriber exists
log = ["tracing/log"]

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
bytes = "1"
rustc-hash = "1.1"
rand = "0.8"
ring = { version = "0.17", optional = true }
rustls-pki-types = { version = "1", optional = true }
rustls = { version = "0.22", default-features = false, optional = true }
rustls-platform-verifier = { version = "0.2", optional = true }
slab = "0.4"
thiserror = "1.0.56"
tinyvec = { version = "1.6", features = ["alloc"] }
tracing = "0.1.40"

[dev-dependencies]
assert_matches = "1.5"
hex-literal = "0.4.1"
rcgen = "0.12.1"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
lazy_static = "1"
